--- a/calculadora/src/app/calculadora/components/calculadora.component.html
+++ b/calculadora/src/app/calculadora/components/calculadora.component.html
@@ -1,165 +1,166 @@
 <div class="container-fluid">
-    <form>
-      <div class="row">
-        <div class="col-xs-8 col-sm-6 col-md-4">
-          <div 
-            class="text-center bg-primary img-rounded kz-pad-20">
-            <div class="row">
-              <div class="col-xs-3">
-                <button 
-                  type="button" 
-                
-                  class="btn btn-danger kz-btn">C
-                </button>
-              </div>
-              <div class="col-xs-9">
-                <input 
-                  type="text" 
-                  class="form-control text-right kz-input-text"
-                  id="display" 
-                  name="display" 
-                 
-                  readonly>
-              </div>
+  <form>
+    <div class="row">
+      <div class="col-xs-8 col-sm-6 col-md-4">
+        <div 
+          class="text-center img-rounded kz-pad-20"
+          style="background-color: purple;">
+          <div class="row">
+            <div class="col-xs-3">
+              <button 
+                type="button" 
+                class="btn btn-danger kz-btn"
+                (click)="limpar()">C
+              </button>
             </div>
-            <div class="row">
-              <div class="col-xs-3">
-                <button 
-                  type="button" 
-                  class="btn btn-default kz-btn" 
-                  
-                  id="btn7">7
-                </button>
-              </div>
-              <div class="col-xs-3">
-                <button 
-                  type="button" 
-                  class="btn btn-default kz-btn" 
-                  
-                  id="btn8">8
-                </button>
-              </div>
-              <div class="col-xs-3">
-                <button 
-                  type="button" 
-                  class="btn btn-default kz-btn" 
-                  
-                  id="btn9">9
-                </button>
-              </div>
-              <div class="col-xs-3">
-                <button 
-                  type="button" 
-                  class="btn btn-warning kz-btn" 
-                  
-                  id="btnDivisao">/
-                </button>
-              </div>
+            <div class="col-xs-9">
+              <input 
+                type="text" 
+                class="form-control text-right kz-input-text"
+                id="display" 
+                name="display" 
+                readonly
+                [value]="display">
             </div>
-            <div class="row">
-              <div class="col-xs-3">
-                <button 
-                  type="button" 
-                  class="btn btn-default kz-btn" 
-                 
-                  id="btn4">4
-                </button>
-              </div>
-              <div class="col-xs-3">
-                <button 
-                  type="button" 
-                  class="btn btn-default kz-btn" 
-                  
-                  id="btn5">5
-                </button>
-              </div>
-              <div class="col-xs-3">
-                <button 
-                  type="button" 
-                  class="btn btn-default kz-btn" 
-                  
-                  id="btn6">6
-                </button>
-              </div>
-              <div class="col-xs-3">
-                <button 
-                  type="button" 
-                  class="btn btn-warning kz-btn"  
-                  
-                  id="btnMIltiplicacao">*
-                </button>
-              </div>
+          </div>
+          <div class="row">
+            <div class="col-xs-3">
+              <button 
+                type="button" 
+                class="btn btn-primary kz-btn" 
+                id="btn7"
+                (click)="adcionaNumero('7')">7
+              </button>
             </div>
-            <div class="row">
-              <div class="col-xs-3">
-                <button 
-                  type="button" 
-                  class="btn btn-default kz-btn" 
-                  
-                  id="btn1">1
-                </button>
-              </div>
-              <div class="col-xs-3">
-                <button 
-                  type="button" 
-                  class="btn btn-default kz-btn" 
-                  
-                  id="btn2">2
-                </button>
-              </div>
-              <div class="col-xs-3">
-                <button 
-                  type="button" 
-                  class="btn btn-default kz-btn" 
-                  
-                  id="btn3">3
-                </button>
-              </div>
-              <div class="col-xs-3">
-                <button 
-                  type="button" 
-                  class="btn btn-warning kz-btn" 
-                  
-                  id="btnSubtracao">-
-                </button>
-              </div>
+            <div class="col-xs-3">
+              <button 
+                type="button" 
+                class="btn btn-primary kz-btn" 
+                id="btn8"
+                (click)="adcionaNumero('8')">8
+              </button>
             </div>
-            <div class="row">
-              <div class="col-xs-3">
-                <button 
-                  type="button" 
-                  class="btn btn-default kz-btn" 
-                  
-                  id="btn0">0
-                </button>
-              </div>
-              <div class="col-xs-3">
-                <button 
-                  type="button" 
-                  class="btn btn-default kz-btn" 
-                  
-                  id="btnDecimal">.
-                </button>
-              </div>
-              <div class="col-xs-3">
-                <button 
-                  type="button" 
-                  class="btn btn-success kz-btn" 
-                  
-                  id="btnCalcular">=
-                </button>
-              </div>
-              <div class="col-xs-3">
-                <button 
-                  type="button" 
-                  class="btn btn-warning kz-btn" 
-                  
-                  id="btnSoma">+
-                </button>
-              </div>
+            <div class="col-xs-3">
+              <button 
+                type="button" 
+                class="btn btn-primary kz-btn" 
+                id="btn9"
+                (click)="adcionaNumero('9')">9
+              </button>
+            </div>
+            <div class="col-xs-3">
+              <button 
+                type="button" 
+                class="btn btn-warning kz-btn" 
+                id="btnDivisao"
+                (click)="definirOperacao('/')">/
+              </button>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-xs-3">
+              <button 
+                type="button" 
+                class="btn btn-primary kz-btn" 
+                id="btn4"
+                (click)="adcionaNumero('4')">4
+              </button>
+            </div>
+            <div class="col-xs-3">
+              <button 
+                type="button" 
+                class="btn btn-primary kz-btn" 
+                id="btn5"
+                (click)="adcionaNumero('5')">5
+              </button>
+            </div>
+            <div class="col-xs-3">
+              <button 
+                type="button" 
+                class="btn btn-primary kz-btn" 
+                id="btn6"
+                (click)="adcionaNumero('6')">6
+              </button>
+            </div>
+            <div class="col-xs-3">
+              <button 
+                type="button" 
+                class="btn btn-warning kz-btn"  
+                id="btnMIltiplicacao"
+                (click)="definirOperacao('')">
+              </button>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-xs-3">
+              <button 
+                type="button" 
+                class="btn btn-primary kz-btn" 
+                id="btn1"
+                (click)="adcionaNumero('1')">1
+              </button>
+            </div>
+            <div class="col-xs-3">
+              <button 
+                type="button" 
+                class="btn btn-primary kz-btn" 
+                id="btn2"
+                (click)="adcionaNumero('2')">2
+              </button>
+            </div>
+            <div class="col-xs-3">
+              <button 
+                type="button" 
+                class="btn btn-primary kz-btn" 
+                id="btn3"
+                (click)="adcionaNumero('3')">3
+              </button>
+            </div>
+            <div class="col-xs-3">
+              <button 
+                type="button" 
+                class="btn btn-warning kz-btn" 
+                id="btnSubtracao"
+                (click)="definirOperacao('-')">-
+              </button>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-xs-3">
+              <button 
+                type="button" 
+                class="btn btn-primary kz-btn" 
+                id="btn0"
+                (click)="adcionaNumero('0')">0
+              </button>
+            </div>
+            <div class="col-xs-3">
+              <button 
+                type="button" 
+                class="btn btn-primary kz-btn" 
+                id="btnDecimal"
+                (click)="adcionaNumero('.')">.
+              </button>
+            </div>
+            <div class="col-xs-3">
+              <button 
+                type="button" 
+                class="btn btn-success kz-btn" 
+                id="btnCalcular"
+                (click)="calcular()">=
+              </button>
+            </div>
+            <div class="col-xs-3">
+              <button 
+                type="button" 
+                class="btn btn-warning kz-btn" 
+                id="btnSoma"
+                (click)="definirOperacao('+')">+
+              </button>
             </div>
           </div>
         </div>
       </div>
-    </form>
-  </div>
+    </div>
+  </form>
+</div>
