estilização projeto livros angular

--- a/projeto-livros/src/app/app.component.html
+++ b/projeto-livros/src/app/app.component.html
@@ -1,12 +1,13 @@
-<div class="container-fluid">
-  <nav class="navbar navbar-default">
-    <div class="container-fluid">
-      <div class="nav-header">
-        <a href="" class="navbar-brand">
-          {{ title }}
-        </a>
+<div class="topheader">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-12">
+        <div class="logo"><img src="../assets/images/logo.png"></div>
       </div>
+      <!-- <div class="col-lg-8">{{ title }}</div> -->
+
     </div>
-  </nav>
-  <router-outlet></router-outlet>
+  </div>
 </div>
+
+      <router-outlet></router-outlet>
