--- a/projeto-livros/src/app/tarefa/listar/listar-tarefa.component.html
+++ b/projeto-livros/src/app/tarefa/listar/listar-tarefa.component.html
@@ -1,45 +1,66 @@
-<h1>Lista de Livros</h1>
+<div class="breadcrumb">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-12">
+        <h1>Lista de Livros</h1>
+      </div>
+    </div>
+  </div>
+</div>
 
-<table class="table table-striped table-bordered table-hover">
-  <tbody>
-    <tr>
-      <th>Título</th>
-      <th>Autor</th>
-      <th>Editoria</th>
-      <th>Categoria</th>
-      <th>Estoque</th>
-      <th class="text-center">
-        <a class="btn btn-xs btn-success">
-          <span class="glyphicon glyphicon-plus" aria-hidden="true"></span> Novo
-        </a>
-      </th>
-    </tr>
-    <tr *ngFor="let tarefa of tarefas"  [class.success]="tarefa.estoque"> <!-- Esse tarefas é o array de tarefas que tenos em listar-tarefacomponents.ts -->
-      <td>  <!-- essa linha é um Property Biding -->
-          {{ tarefa.titulo}} 
-      </td>
-      <td>  
-        {{ tarefa.autor}} 
-      </td>
-      <td> 
-        {{ tarefa.editora}} 
-      </td>
-      <td> 
-        {{ tarefa.categoria}} 
-      </td>
-      <td style="width: 70px" class="text-center">
-        <input type="checkbox">
-      </td>
-      <td class="text-center" style="width: 200px">
-        <a title="Editar" alt="Editar" class="btn btn-xs btn-info">
-          <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> Editar
-        </a>
-        <a href="#" title="Remover" alt="Remover" class="btn btn-xs btn-danger">
-          <span class="glyphicon glyphicon-remove" aria-hidden="true"></span> Remover
-        </a>
-      </td>
-    </tr>
-  </tbody>
-</table>
+<div class="container">
+  <div class="col-lg-12">
+    <div class="page">
 
-<p *ngIf="tarefas.length == 0">Nenhuma tarefa cadastrada.</p>
+      <table class="table table-striped table-bordered table-hover">
+        <tbody>
+          <tr class="tittab">
+            <th>Título</th>
+            <th>Autor</th>
+            <th>Editoria</th>
+            <th>Categoria</th>
+            <th>Estoque</th>
+            <th class="text-center">
+              <a class="btn btn-xs btn-success">
+                <span class="glyphicon glyphicon-plus" aria-hidden="true"></span> Novo
+              </a>
+            </th>
+          </tr>
+          <tr *ngFor="let tarefa of tarefas" [class.success]="tarefa.estoque" class="listlivros">
+            <!-- Esse tarefas é o array de tarefas que tenos em listar-tarefacomponents.ts -->
+            <td>
+              <!-- essa linha é um Property Biding -->
+              {{ tarefa.titulo}}
+            </td>
+            <td>
+              {{ tarefa.autor}}
+            </td>
+            <td>
+              {{ tarefa.editora}}
+            </td>
+            <td>
+              {{ tarefa.categoria}}
+            </td>
+            <td style="width: 70px" class="text-center">
+              <label class="checkbox">
+                <input type="checkbox" />
+            </label>
+            </td>
+            <td class="text-center" style="width: 200px">
+              <a title="Editar" alt="Editar" class="btn btn-xs btn-info">
+                <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> Editar
+              </a>
+              <a href="#" title="Remover" alt="Remover" class="btn btn-xs btn-danger">
+                <span class="glyphicon glyphicon-remove" aria-hidden="true"></span> Remover
+              </a>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+
+      <p *ngIf="tarefas.length == 0">Nenhuma tarefa cadastrada.</p>
+
+
+    </div>
+  </div>
+</div>
