--- a/projeto-livros/src/app/tarefa/listar/listar-tarefa.component.html
+++ b/projeto-livros/src/app/tarefa/listar/listar-tarefa.component.html
@@ -12,41 +12,33 @@
   <div class="col-lg-12">
     <div class="page">
 
-      <table class="table table-striped table-bordered table-hover">
-        <tbody>
-          <tr class="tittab">
-            <th>Título</th>
-            <th>Autor</th>
-            <th>Editoria</th>
-            <th>Categoria</th>
-            <th>Estoque</th>
-            <th class="text-center">
-              <a class="btn btn-xs btn-success">
+
+      <table class="table">
+        <thead>
+          <tr>
+            <th scope="col">Título</th>
+            <th scope="col">N° Pág</th>
+            <th scope="col">Autor</th>
+            <th scope="col">ISBN</th>
+            <th scope="col">Edição</th>
+            <th scope="col">Editora</th>
+            <th scope="col">
+              <a class="btn btn-xs btn-success" [routerLink]="['/tarefa/cadastrar']">
                 <span class="glyphicon glyphicon-plus" aria-hidden="true"></span> Novo
               </a>
             </th>
           </tr>
-          <tr *ngFor="let tarefa of tarefas" [class.success]="tarefa.estoque" class="listlivros">
-            <!-- Esse tarefas é o array de tarefas que tenos em listar-tarefacomponents.ts -->
-            <td>
-              <!-- essa linha é um Property Biding -->
-              {{ tarefa.titulo}}
-            </td>
-            <td>
-              {{ tarefa.autor}}
-            </td>
-            <td>
-              {{ tarefa.editora}}
-            </td>
-            <td>
-              {{ tarefa.categoria}}
-            </td>
-            <td style="width: 70px" class="text-center">
-              <label class="checkbox">
-                <input type="checkbox" />
-            </label>
-            </td>
-            <td class="text-center" style="width: 200px">
+        </thead>
+        <tbody>
+          <tr *ngFor="let tarefa of tarefas" class="listlivros">
+            <th scope="row">{{ tarefa.titulo }}</th>
+            <td scope="row">{{ tarefa.num_pag }}</td>
+            <td scope="row">{{ tarefa.autor }}</td>
+            <td scope="row">{{ tarefa.isbn }}</td>
+            <td scope="row">{{ tarefa.edicao }}</td>
+            <td scope="row">{{ tarefa.editora }}</td>
+
+            <td scope="row">
               <a title="Editar" alt="Editar" class="btn btn-xs btn-info">
                 <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> Editar
               </a>
@@ -58,7 +50,8 @@
         </tbody>
       </table>
 
-      <p *ngIf="tarefas.length == 0">Nenhuma tarefa cadastrada.</p>
+
+      <p *ngIf="tarefas.length == 0">Nenhuma livro cadastrado.</p>
 
 
     </div>
