finalizar crud tarefas

--- a/gerenciador-de-tarefas/src/app/app.component.html
+++ b/gerenciador-de-tarefas/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="container-fluid">
-  <nav class="navbar navbar-default">
+  <nav class="navbar navbar-default" [routerLink] = "['/']">
     <div class="container-fluid">
       <div class="nav-header">
         <a class="navbar-brand" href="#">
