--- a/gerenciador-de-tarefas/src/app/tarefas/listar/listar-tarefa.component.html
+++ b/gerenciador-de-tarefas/src/app/tarefas/listar/listar-tarefa.component.html
@@ -6,23 +6,23 @@
       <th>Tarefa</th>
       <th>Concluída</th>
       <th class="text-center">
-        <a class="btn btn-xs btn-success">
+        <a class="btn btn-xs btn-success" [routerLink]="['/tarefas/cadastrar']">
           <span class="glyphicon glyphicon-plus" aria-hidden="true"></span> Novo
         </a>
       </th>
     </tr>
     <tr *ngFor="let tarefa of tarefas"> <!-- Esse tarefas é o array de tarefas que tenos em listar-tarefacomponents.ts -->
-      <td [class.success]="tarefa.concluida">  <!-- essa linha é um Property Biding -->
-          {{ tarefa.nome}} <!-- Exibe na tela o nome da tarefa -->
+      <td [tarefasConcluida]="tarefa.concluida" [class.success]="tarefa.concluida" >  <!-- essa linha é um Property Biding -->
+          {{ tarefa.nome }} <!-- Exibe na tela o nome da tarefa -->
       </td>
       <td style="width: 70px" class="text-center">
-        <input type="checkbox">
+        <input type="checkbox" [value]="tarefa.id" [checked]="tarefa.concluida" (click)="alterarStatus(tarefa)">
       </td>
       <td class="text-center" style="width: 200px">
-        <a title="Editar" alt="Editar" class="btn btn-xs btn-info">
+        <a title="Editar" alt="Editar" class="btn btn-xs btn-info" [routerLink] = "['/tarefas/editar', tarefa.id]">
           <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> Editar
         </a>
-        <a href="#" title="Remover" alt="Remover" class="btn btn-xs btn-danger">
+        <a title="Remover" alt="Remover" class="btn btn-xs btn-danger" (click)="remover($event, tarefa)">
           <span class="glyphicon glyphicon-remove" aria-hidden="true"></span> Remover
         </a>
       </td>
