--- a/conversor-de-moeda/src/app/conversor/components/conversor.component.html
+++ b/conversor-de-moeda/src/app/conversor/components/conversor.component.html
@@ -9,7 +9,7 @@
   <div class="panel-body text-center">
     <form #conversaoForm="ngForm" class="form-inline">
       <input type="text" name="valor" class="form-control text-right" placeholder="0" [(ngModel)]="conversao.valor"
-        required>
+        numero required>
       <select name="moedaDe" [(ngModel)]="conversao.moedaDe" class="form-control" required>
         <option *ngFor="let moeda of moedas" [value]="moeda.sigla">
           {{moeda.sigla}} - {{moeda.descricao}}
