integracao-mongoose-angular

--- a/crud-para-product/front/src/app/app.component.html
+++ b/crud-para-product/front/src/app/app.component.html
@@ -6,5 +6,6 @@
 <mat-card>
   <div fxLayout="row" fxLayoutAling="space-between stretch">
     <app-department fxFlex="50"></app-department>
+    <app-product fxFlex="50"></app-product>
   </div>
 </mat-card>
