--- a/vemcausarsite/src/app/app.component.html
+++ b/vemcausarsite/src/app/app.component.html
@@ -1,5 +1,36 @@
 <header id="head">
-
+  <div class="container">
+    <div class="row">
+      <nav class="navbar navbar-expand-lg">
+        <a class="navbar-brand" [routerLink]="['/home']">Navbar</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarText">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item active">
+              <a class="nav-link" [routerLink]="['/home']">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link">Sobre</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link">Torne-se um causador</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link">Qual a sua Causa</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link"  [routerLink]="['/contato']">Contato</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link">Login</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+    </div>
+  </div>
 </header>
 
 <router-outlet></router-outlet>
