--- a/vemcausarsite/src/styles.css
+++ b/vemcausarsite/src/styles.css
@@ -4,6 +4,81 @@ body {
   font-weight: 300;
 }
 
+nav {
+  width: 100%;
+}
+.imgfluid img {
+  width: 100%;
+}
+.sticky {
+  position: fixed;
+  top: 0;
+  background: #FFF;
+  transition: .2s;
+  width: 100%;
+  box-shadow: 0 2px 20px 0 rgb(0 0 0 / 15%);
+}
+
+.bt_bb_section {
+  position: relative;
+}
+.bt_bb_section .bt_bb_section_bottom_section_coverage_image {
+  bottom: -1px;
+  position: absolute;
+    right: 0;
+    left: 0;
+    pointer-events: none;
+    z-index: -1;
+}
+a.nav-link {
+  color: #00817d;
+  cursor: pointer;
+}
+
+
+.bread {
+  position: relative;
+  z-index: -1;
+}
+.bread:before {
+  background: linear-gradient(to bottom,rgba(0,0,0,1) 0%,rgba(0,0,0,0) 25%,rgba(0,0,0,0) 55%,rgba(0,0,0,1) 100%);
+  content: "";
+  pointer-events: none;
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  z-index: 1;
+}
+.bread .titpage {
+  display: table;
+}
+.bread h1 {
+  display: table-cell;
+  vertical-align: middle;
+  height: 500px;
+  font-size: 7rem;
+  font-weight: 600;
+}
+
+
+
+.bottom-02 {
+  position: absolute;
+    right: 0;
+    left: 0;
+    pointer-events: none;
+    z-index: 2;
+  bottom: -1px;
+}
+
+
+
+
+
+
+
 .newsletter {
   background-color: #f7f7f5;
   padding: 130px 0;
